src/components/NyxTabs/NyxTabs.scss
.nyx-tabs {
  --nyx-rgb-tabs: var(--nyx-rgb-default);
  --nyx-rgb-tabs-bg: rgba(var(--nyx-rgb-tabs), 0.05);
  --nyx-c-tabs: var(--nyx-c-default);
  --nyx-pad-tabs: var(--nyx-pad-md);
  --nyx-tab-index: 0;

  display: flex;
  flex-direction: column;
  min-height: 0;
  border: 1px solid var(--nyx-rgb-tabs-bg);
  overflow: hidden;

  & > nav ul {
    display: flex;

    & > li {
      flex: 1;
      border-right: 1px solid rgba(var(--nyx-rgb-tabs), 0.1);

      &:last-child {
        border-right: 0;
      }
    }
  }

  &__container {
    display: flex;
    flex: 1 1 auto;
    flex-wrap: nowrap;
    min-height: 0;
    overflow: hidden;
    transform: translateX(calc(0px - (var(--nyx-tab-index)) * 100%));
  }

  &__tab {
    display: flex;
    flex: 1 0 100%;
    flex-direction: column;
    min-width: 100%;
    min-height: 0;
    padding: 1rem;
    opacity: 0;
    overflow-y: auto;
    transition: opacity calc(2 * var(--nyx-speed-slowest));

    &.active {
      opacity: 1;
    }
  }

  &__button {
    display: flex;
    flex-direction: column;
    gap: var(--nyx-gap-md);
    width: 100%;
    background-color: var(--nyx-rgb-tabs-bg);
    padding: var(--nyx-pad-md);
    text-transform: uppercase;
    font-weight: 600;
    letter-spacing: 1px;
    box-shadow: inset 0 0 0 var(--nyx-c-tabs);
    transition-property: background-color, color, box-shadow;
    transition-duration: var(--nyx-speed-fast);

    &:last-child {
      border-right: 0;
    }

    &:hover,
    &.active {
      color: var(--nyx-c-tabs);
    }

    &.active {
      background-color: transparent;
      box-shadow: inset 0 3px 0 var(--nyx-c-tabs);
    }
  }

  &.theme-primary {
    --nyx-c-tabs: var(--nyx-c-primary);
    --nyx-rgb-tabs: var(--nyx-rgb-primary);
  }

  &.theme-secondary {
    --nyx-c-tabs: var(--nyx-c-secondary);
    --nyx-rgb-tabs: var(--nyx-rgb-secondary);
  }

  &.theme-info {
    --nyx-c-tabs: var(--nyx-c-info);
    --nyx-rgb-tabs: var(--nyx-rgb-info);
  }

  &.theme-success {
    --nyx-c-tabs: var(--nyx-c-success);
    --nyx-rgb-tabs: var(--nyx-rgb-success);
  }

  &.theme-warning {
    --nyx-c-tabs: var(--nyx-c-warning);
    --nyx-rgb-tabs: var(--nyx-rgb-warning);
  }

  &.theme-danger {
    --nyx-c-tabs: var(--nyx-c-danger);
    --nyx-rgb-tabs: var(--nyx-rgb-danger);
  }
}

